# ca-river-valleys

./: .gitignore  README.md  Snakefile  config.yaml  config.yaml.example  huc10s.csv  pyproject.toml  readme.md
california_mask/: California.dbf  California.sbx  California.shx
data/: special_cases.csv  target_huc10s.csv
data/california_mask/: California.sbn  California.shp
data/s_05mr24/: README.md
params/: params_10m.toml  params_1m.toml
scripts/: download_huc_manifest.py  missing.py  mosaic.py  mosaic_huc6.py  outside.py
src/: base.toml  dl_dem_and_flowlines.py  dl_land_shape.py  dl_target_huc10s.py  download_huc.py  failed_hucs.csv  filter_hucs.py  filter_nhd.py  generate_target_huc10s.py  get_huc.py  get_hucs.py  get_target_hucs.py  init_whitebox.py  mosaic.py  ocean_mask.py  utils.py  valley_floors.py
