[tool.poetry]
name = "river-valleys"
version = "0.1.0"
description = "Code for creating california river valleys dataset"
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygeohydro = "^0.16.0"
pynhd = "^0.16.2"
shapely = "^2.0.3"
pyvalleys = { git = "ssh://git@github.com/avkoehl/valleys.git", branch = "main" }
py3dep = "^0.16.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
ipykernel = "^6.29.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
