[tool.poetry]
name = "ca-valley-floors"
package-mode = false
version = "0.1.0"
description = "Code for creating california valley floor dataset"
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygeohydro = "^0.16.0"
pynhd = "^0.16.2"
shapely = "^2.0.3"
valleyx = { git = "ssh://git@github.com/avkoehl/valleyx.git", branch = "main" }
py3dep = "^0.16.2"
pulp = "2.7.0" # for snakemake to work https://github.com/snakemake/snakemake/issues/2607
snakemake = "7.32.4" # if snake > 8 need python >3.11
rasterio = "^1.3.11"
fiona = "^1.10.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
ipykernel = "^6.29.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
